// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Entity: Integration Test should create document 1`] = `
Object {
  "entityName": "int_test_document",
  "id": "321321321",
  "version": 0,
}
`;

exports[`Etc Privatedata: Integration Test should create EtcPo 1`] = `
Object {
  "entityName": "int_test_etcPo",
  "id": "321321321",
  "version": 0,
}
`;

exports[`Etc Privatedata: Integration Test should query: getEtcPoById 1`] = `
Object {
  "getEtcPoById": Object {
    "body": "etc po details",
    "document": Object {
      "title": "test-title",
      "tradeId": "123123123",
    },
    "id": "321321321",
    "ownerId": "test@gmail.com",
  },
}
`;

exports[`Etc Privatedata: Integration Test should run federated query: getDocumentEtcById 1`] = `
Object {
  "getDocumentById": Object {
    "description": "test-description",
    "documentId": "321321321",
    "etcPo": Object {
      "body": "etc po details",
    },
    "link": "test-link",
    "ownerId": "test@gmail.com",
    "title": "test-title",
    "trade": Object {
      "description": "test-description",
      "title": "test-title",
    },
    "tradeId": "123123123",
  },
}
`;

exports[`Trade Entity: Integration Test should create trade 1`] = `
Object {
  "entityName": "int_test_trade",
  "id": "123123123",
  "version": 0,
}
`;

exports[`User Entity: Integration Test should create user 1`] = `
Object {
  "entityName": "int_test_user",
  "id": "test@gmail.com",
}
`;

exports[`User Entity: Integration Test should run QUERIES 1`] = `
Object {
  "getAllUser": Array [
    Object {
      "name": "Create Test User",
      "userId": "test@gmail.com",
    },
  ],
}
`;

exports[`User Entity: Integration Test should run QUERIES 2`] = `
Object {
  "getPaginatedUser": Object {
    "entities": Array [
      Object {
        "name": "Create Test User",
        "userId": "test@gmail.com",
      },
    ],
    "hasMore": false,
    "total": 1,
  },
}
`;

exports[`User Entity: Integration Test should run QUERIES 3`] = `
Object {
  "getUserById": Object {
    "mergedUserIds": Array [
      "test@gmail.com",
    ],
    "name": "Create Test User",
    "userId": "test@gmail.com",
  },
}
`;

exports[`User Entity: Integration Test should run QUERIES 4`] = `
Object {
  "entityName": "int_test_user",
  "events": Array [
    Object {
      "type": "UserCreated",
    },
  ],
  "id": "test@gmail.com",
  "version": 0,
}
`;
